tests/failing/lifetime_simple.tk
# tarik (c) Nikolas Wipper 2025
# /tk test
# /tk fail

struct test_struct {
    i32 member;
}
struct recursive_struct {
    test_struct t;
    i32 member;
}

fn struct_taking_func(test_struct ts) {}

fn test() {
    {
        i32 t = 0;

        # /tk error
        #i32 *pt = &t;

        # /tk warning
        t = 1;

        #*pt;

        t = 0;
        #pt = &t;
    }

    {
        recursive_struct rs = recursive_struct [ test_struct [ 0 ], 1 ];
        i32 *pts = &rs.member;

        struct_taking_func(rs.t);

        pts;
    }


    # /tk error
    #i32 *pointer = &as!(5, i32);
    #*pointer;
    # /tk error
    #str **str_ptr = &"test";
    i32 store;

    {
        # /tk warning
        i32 value = 5;
        value = 4;
        # /tk error
        #pointer = &value;
        store = *&value;
    }
}